--- a/SharpDocx/SharpDocx v4.5.csproj
+++ b/SharpDocx/SharpDocx v4.5.csproj
@@ -59,7 +59,7 @@
     <Compile Include="Extensions\AssemblyExtensions.cs" />
     <Compile Include="Models\CodeBlock.cs" />
     <Compile Include="CodeBlockFactory.cs" />
-    <Compile Include="Models\TextPart.cs" />
+    <Compile Include="Models\MapPart.cs" />
     <Compile Include="Extensions\OpenXmlElementExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
