--- a/SharpDocx/SharpDocx v4.5.csproj
+++ b/SharpDocx/SharpDocx v4.5.csproj
@@ -50,6 +50,7 @@
     <Compile Include="CharacterMap.cs" />
     <Compile Include="CodeBlockBuilder.cs" />
     <Compile Include="ElementAppender.cs" />
+    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Ide.cs" />
     <Compile Include="ImageHelper.cs" />
     <Compile Include="Models\Character.cs" />
