Refactored code, introduced ConditionalCodeBlock.

--- a/SharpDocx/SharpDocx v3.5.csproj
+++ b/SharpDocx/SharpDocx v3.5.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Extensions\AssemblyExtensions.cs" />
     <Compile Include="Models\CodeBlock.cs" />
     <Compile Include="Extensions\OpenXmlElementExtensions.cs" />
+    <Compile Include="Models\ConditionalCodeBlock.cs" />
     <Compile Include="Models\MapPart.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
