--- a/SharpDocx/SharpDocx v4.5.csproj
+++ b/SharpDocx/SharpDocx v4.5.csproj
@@ -60,6 +60,7 @@
     <Compile Include="DocumentFactory.cs" />
     <Compile Include="Extensions\AssemblyExtensions.cs" />
     <Compile Include="Models\CodeBlock.cs" />
+    <Compile Include="Models\ConditionalCodeBlock.cs" />
     <Compile Include="Models\MapPart.cs" />
     <Compile Include="Extensions\OpenXmlElementExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
