Introduced document directives. Added support for referencing assemblies and importing namespaces in views. Examples: -To reference an assembly, use <%@ Assembly Name="System.Speech" %>. -To use a namespace, use <%@ Import Namespace="System.Speech.Synthesis" %>.

--- a/SharpDocx/SharpDocx v3.5.csproj
+++ b/SharpDocx/SharpDocx v3.5.csproj
@@ -54,7 +54,9 @@
   <ItemGroup>
     <Compile Include="CharacterMap.cs" />
     <Compile Include="CodeBlockBuilder.cs" />
+    <Compile Include="Directive.cs" />
     <Compile Include="ElementAppender.cs" />
+    <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Ide.cs" />
     <Compile Include="ImageHelper.cs" />
