--- a/SharpDocx/SharpDocx v4.5.csproj
+++ b/SharpDocx/SharpDocx v4.5.csproj
@@ -49,7 +49,7 @@
   <ItemGroup>
     <Compile Include="CharacterMap.cs" />
     <Compile Include="CodeBlockBuilder.cs" />
-    <Compile Include="Directive.cs" />
+    <Compile Include="CodeBlocks\Directive.cs" />
     <Compile Include="ElementAppender.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="GlobalSuppressions.cs" />
@@ -61,8 +61,8 @@
     <Compile Include="DocumentBase.cs" />
     <Compile Include="DocumentFactory.cs" />
     <Compile Include="Extensions\AssemblyExtensions.cs" />
-    <Compile Include="Models\CodeBlock.cs" />
-    <Compile Include="Models\ConditionalCodeBlock.cs" />
+    <Compile Include="CodeBlocks\CodeBlock.cs" />
+    <Compile Include="CodeBlocks\ConditionalText.cs" />
     <Compile Include="Models\MapPart.cs" />
     <Compile Include="Extensions\OpenXmlElementExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
