--- a/SharpDocx/SharpDocx v3.5.csproj
+++ b/SharpDocx/SharpDocx v3.5.csproj
@@ -51,10 +51,10 @@
   <ItemGroup>
     <Compile Include="CharacterMap.cs" />
     <Compile Include="CodeBlockBuilder.cs" />
+    <Compile Include="CodeBlocks\Appender.cs" />
     <Compile Include="CodeBlocks\CodeBlock.cs" />
     <Compile Include="CodeBlocks\ConditionalText.cs" />
     <Compile Include="CodeBlocks\Directive.cs" />
-    <Compile Include="ElementAppender.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Ide.cs" />
