--- a/SharpDocx/SharpDocx v4.5.csproj
+++ b/SharpDocx/SharpDocx v4.5.csproj
@@ -45,8 +45,8 @@
   <ItemGroup>
     <Compile Include="CharacterMap.cs" />
     <Compile Include="CodeBlockBuilder.cs" />
+    <Compile Include="CodeBlocks\Appender.cs" />
     <Compile Include="CodeBlocks\Directive.cs" />
-    <Compile Include="ElementAppender.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Ide.cs" />
