--- a/Samples/SampleProjects/Model/Model.csproj
+++ b/Samples/SampleProjects/Model/Model.csproj
@@ -38,7 +38,7 @@
   <ItemGroup>
     <Compile Include="Extensions.cs" />
     <Compile Include="Models\Country.cs" />
-    <Compile Include="Models\DocumentViewModel.cs" />
+    <Compile Include="Models\MyViewModel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\CountryRepository.cs" />
