--- a/SharpDocx/nupkg/SharpDocx.nuspec
+++ b/SharpDocx/nupkg/SharpDocx.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>SharpDocx</id>
-    <version>1.0.0</version>
+    <version>1.1.0</version>
     <authors>egonl</authors>
     <owners>egonl</owners>
     <licenseUrl>https://github.com/egonl/SharpDocx/blob/master/LICENSE</licenseUrl>
@@ -15,7 +15,12 @@
 - High performance.
 - Based on Microsoft's Open XML SDK.
 - Source code, tutorial and sample code on GitHub.</description>
-    <releaseNotes>Version 1.0.0 - January 1, 2018
+    <releaseNotes>Version 1.1.0
+- Some performance improvements.
+- You can now specify a view model when calling Document.Generate.
+- Tidied up API.
+
+Version 1.0.0 - January 1, 2018
 - Initial version.</releaseNotes>
     <copyright>Copyright 2018</copyright>
     <tags>openxml office word document sharpdocx</tags>
