--- a/SharpDocx/SharpDocx.csproj
+++ b/SharpDocx/SharpDocx.csproj
@@ -38,6 +38,7 @@
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp">
       <Version>2.10.0</Version>
     </PackageReference>
+    <ProjectReference Include="..\SharpImage\SharpImage.csproj" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFramework)' == 'net35'">
