Improved .NET Standard 2.0 support: all Microsoft.* and System.* DLL's are automatically referenced. Also, the Tutorial now works in .NET Standard 2.0 as well.

--- a/Samples/SampleProjects/Tutorial/Tutorial.csproj
+++ b/Samples/SampleProjects/Tutorial/Tutorial.csproj
@@ -2,8 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <!-- The tutorial doesn't support netcoreapp2.1 yet. The Inheritance and Model sample do, however. -->
-    <TargetFrameworks>net45;net35</TargetFrameworks>
+    <TargetFrameworks>net45;net35;netcoreapp2.0</TargetFrameworks>
     <RootNamespace>Tutorial</RootNamespace>
   </PropertyGroup>
 
