Added overload for Generate method to return stream

--- a/Samples/SampleProjects/Tutorial/Tutorial.csproj
+++ b/Samples/SampleProjects/Tutorial/Tutorial.csproj
@@ -4,6 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFrameworks>net45;net35;netcoreapp2.0</TargetFrameworks>
     <RootNamespace>Tutorial</RootNamespace>
+    <StartupObject>Tutorial.ProgramStream</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
