--- a/SharpDocx/nupkg/SharpDocx.nuspec
+++ b/SharpDocx/nupkg/SharpDocx.nuspec
@@ -2,20 +2,25 @@
 <package >
   <metadata>
     <id>SharpDocx</id>
-    <version>1.2.0</version>
+    <version>1.2.1</version>
     <authors>egonl</authors>
     <owners>egonl</owners>
-    <licenseUrl>https://github.com/egonl/SharpDocx/blob/master/LICENSE</licenseUrl>
+    <!--<licenseUrl>https://github.com/egonl/SharpDocx/blob/master/LICENSE</licenseUrl>-->
+    <license type="expression">MIT</license>
     <projectUrl>https://github.com/egonl/SharpDocx</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-	<summary>Create simple and complex Word documents with ease</summary>
+    <summary>Create simple and complex Word documents with ease</summary>
     <description>Framework for creating Word documents 
 - Use C# code inside Word documents for inserting text, images or tables.
 - Supports the MVC pattern, where the view is a Word document.
 - Supports .NET Framework 3.5/4.5 and .NET Standard 2.0.
 - Based on Microsoft's Open XML SDK.
 - Source code, tutorial and sample code on GitHub.</description>
-    <releaseNotes>Version 1.2.0 - February 22, 2019
+    <releaseNotes>Version 1.2.1 - December 23, 2019
+- Upgraded to DocumentFormat.OpenXml 2.9.1.
+- Fixed issue with NuGet dependencies.
+
+Version 1.2.0 - February 22, 2019
 - Added support for .NET Standard 2.0.
 
 Version 1.1.0 - January 4, 2018
@@ -28,8 +33,16 @@ Version 1.0.0 - January 1, 2018
     <copyright>Copyright 2018</copyright>
     <tags>openxml office word document sharpdocx</tags>
     <dependencies>
-      <dependency id="DocumentFormat.OpenXml" version="2.8.1" />
-      <dependency id="Microsoft.CodeAnalysis.CSharp" version="2.10.0" />
+      <group targetFramework="net35">
+        <dependency id="DocumentFormat.OpenXml" version="2.9.1" />
+      </group>            
+      <group targetFramework="net45">
+        <dependency id="DocumentFormat.OpenXml" version="2.9.1" />
+      </group>            
+      <group targetFramework="netstandard2.0">
+        <dependency id="DocumentFormat.OpenXml" version="2.9.1" />
+        <dependency id="Microsoft.CodeAnalysis.CSharp" version="2.10.0" />
+      </group>
     </dependencies>
   </metadata>
   <files>
