--- a/SharpDocx/nupkg/SharpDocx.nuspec
+++ b/SharpDocx/nupkg/SharpDocx.nuspec
@@ -2,10 +2,9 @@
 <package >
   <metadata>
     <id>SharpDocx</id>
-    <version>1.2.1</version>
+    <version>2.0.1.0</version>
     <authors>egonl</authors>
     <owners>egonl</owners>
-    <!--<licenseUrl>https://github.com/egonl/SharpDocx/blob/master/LICENSE</licenseUrl>-->
     <license type="expression">MIT</license>
     <projectUrl>https://github.com/egonl/SharpDocx</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
@@ -13,10 +12,14 @@
     <description>Framework for creating Word documents 
 - Use C# code inside Word documents for inserting text, images or tables.
 - Supports the MVC pattern, where the view is a Word document.
-- Supports .NET Framework 3.5/4.5 and .NET Standard 2.0.
+- Supports .NET Framework 3.5/4.5+ and .NET Standard 2.0.
 - Based on Microsoft's Open XML SDK.
 - Source code, tutorial and sample code on GitHub.</description>
-    <releaseNotes>Version 1.2.1 - December 23, 2019
+    <releaseNotes>Version 2.0.1.0 - February 7, 2020
+- Supports templates in loops and if-statements.
+- Templates can be nested (see tutorial).
+	
+Version 1.2.1 - December 23, 2019
 - Upgraded to DocumentFormat.OpenXml 2.9.1.
 - Fixed issue with NuGet dependencies.
 
