--- a/SharpDocx/SharpDocx.csproj
+++ b/SharpDocx/SharpDocx.csproj
@@ -3,12 +3,12 @@
   <PropertyGroup>
     <TargetFrameworks>net45;net35;netstandard2.0</TargetFrameworks>
     <RootNamespace>SharpDocx</RootNamespace>
-    <Version>2.0.1.0</Version>
+    <Version>2.0.2.0</Version>
     <Authors>egonl</Authors>
     <Product>SharpDocx</Product>
-    <PackageId>MyApp</PackageId>
-    <AssemblyVersion>2.0.0.0</AssemblyVersion>
-    <FileVersion>2.0.0.0</FileVersion>
+    <PackageId>SharpDocx</PackageId>
+    <AssemblyVersion>2.0.2.0</AssemblyVersion>
+    <FileVersion>2.0.2.0</FileVersion>
     <NeutralLanguage>en</NeutralLanguage>
     <Description>C# based template engine for generating Word documents</Description>
     <Copyright>Copyright 2017-2020 egonl</Copyright>
