--- a/SharpDocx/nupkg/SharpDocx.nuspec
+++ b/SharpDocx/nupkg/SharpDocx.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>SharpDocx</id>
-    <version>2.0.3.0</version>
+    <version>2.0.4.0</version>
     <authors>egonl</authors>
     <owners>egonl</owners>
     <license type="expression">MIT</license>
@@ -15,13 +15,16 @@
 - Supports .NET Framework 3.5/4.5+ and .NET Standard 2.0.
 - Based on Microsoft's Open XML SDK.
 - Source code, tutorial and sample code on GitHub.</description>
-    <releaseNotes>Version 2.0.3.0 - July 28, 2020
+    <releaseNotes>Version 2.0.4 - August 8, 2020
+- Fixed issue #21.
+	
+Version 2.0.3 - July 28, 2020
 - Fixed issue #18.
 	
-Version 2.0.2.0 - March 14, 2020
+Version 2.0.2 - March 14, 2020
 - Fixed issue #4 and #14.
 	
-Version 2.0.1.0 - February 7, 2020
+Version 2.0.1 - February 7, 2020
 - Supports templates in loops and if-statements.
 - Templates can be nested (see tutorial).
 	
