--- a/SharpDocx/SharpDocx.csproj
+++ b/SharpDocx/SharpDocx.csproj
@@ -38,6 +38,9 @@
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp">
       <Version>2.10.0</Version>
     </PackageReference>
+    <PackageReference Include="System.Runtime.Loader">
+      <Version>4.3.0</Version>
+    </PackageReference>
     <ProjectReference Include="..\SharpImage\SharpImage.csproj" />
   </ItemGroup>
 
