--- a/SharpDocx/nupkg/SharpDocx.nuspec
+++ b/SharpDocx/nupkg/SharpDocx.nuspec
@@ -2,13 +2,13 @@
 <package >
   <metadata>
     <id>SharpDocx</id>
-    <version>2.0.4.1</version>
+    <version>2.1.0.0</version>
     <authors>egonl</authors>
     <owners>egonl</owners>
     <license type="expression">MIT</license>
     <projectUrl>https://github.com/egonl/SharpDocx</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <repository type="git" url="https://github.com/egonl/SharpDocx" commit="65aa9469eef2beac85e46ea3352bbd6d048723d2" />
+    <repository type="git" url="https://github.com/egonl/SharpDocx" commit="b6c4ffcaf7df1d524bc183a05a36900d37b5acb2" />
     <summary>Create simple and complex Word documents with ease</summary>
     <description>Framework for creating Word documents 
 - Use C# code inside Word documents for inserting text, images or tables.
@@ -16,7 +16,15 @@
 - Supports .NET Framework 3.5/4.5+ and .NET Standard 2.0.
 - Based on Microsoft's Open XML SDK.
 - Source code, tutorial and sample code on GitHub.</description>
-    <releaseNotes>Version 2.0.4 - August 8, 2020
+    <releaseNotes>Version 2.1.0 - October 16, 2021
+- Added an overload for the Generate method that returns a stream (issue #8 and #9).
+- Added support for Source Link.
+- Updated samples to .NET Core 3.1.
+- Updated DocumentFormat.OpenXml to 2.13.1.
+- Fixed issue #34.
+- Fixed issue #36.
+
+Version 2.0.4 - August 8, 2020
 - Fixed issue #21.
 	
 Version 2.0.3 - July 28, 2020
