--- a/Samples/SampleProjects/Inheritance/Inheritance.csproj
+++ b/Samples/SampleProjects/Inheritance/Inheritance.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFrameworks>net45;netcoreapp3.1</TargetFrameworks>
+    <TargetFrameworks>net45;netcoreapp3.1;net6.0</TargetFrameworks>
     <RootNamespace>Inheritance</RootNamespace>
   </PropertyGroup>
 
