--- a/SharpDocx/SharpDocx.csproj
+++ b/SharpDocx/SharpDocx.csproj
@@ -1,12 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net45;net35</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;net46;net35</TargetFrameworks>
     <RootNamespace>SharpDocx</RootNamespace>
     <Version>2.0.5.1</Version>
     <Authors>egonl</Authors>
     <Product>SharpDocx</Product>
-    <PackageId>SharpDocx</PackageId>
+    <PackageId>SharpDocx.ANDRITZ</PackageId>
     <AssemblyVersion>2.0.5.1</AssemblyVersion>
     <FileVersion>2.0.5.1</FileVersion>
     <NeutralLanguage>en</NeutralLanguage>
@@ -51,7 +51,7 @@
     <Reference Include="PresentationCore" />
   </ItemGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)' == 'net45'">
+  <ItemGroup Condition="'$(TargetFramework)' == 'net46'">
     <Reference Include="PresentationCore" />
   </ItemGroup>
 
