--- a/SharpDocx/nupkg/SharpDocx.nuspec
+++ b/SharpDocx/nupkg/SharpDocx.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>SharpDocx</id>
-    <version>2.4.1</version>
+    <version>2.5.0</version>
     <authors>egonl</authors>
     <owners>egonl</owners>
     <license type="expression">MIT</license>
@@ -16,7 +16,10 @@
 - Supports .NET Framework 3.5/4.5+, .NET Standard 2.0, .NET Core 3.1, .NET 5.0 and .NET 6.0.
 - Based on Microsoft's Open XML SDK.
 - Source code, tutorial and examples on GitHub.</description>
-    <releaseNotes>Version 2.4.1 - April 18, 2024
+    <releaseNotes>Version 2.5.0 - April 24, 2024
+- Added support for view streams.
+
+Version 2.4.1 - April 18, 2024
 - Updated to DocumentFormat.OpenXml version 3.0.2.
 
 Version 2.4.0 - January 30, 2023
